# just-the-auth

./: .gitignore  Cargo.toml  sqlx-data.json
configurations/: base.yaml  roles.toml
migrations/: 20230619114059_create_base_user_tables.sql  20230619144055_connect_auth_to_org.sql  20230619144211_time_fields_for_user_auth_table.sql  20230619145401_get_rid_of_nulls.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  rbac.rs  routes.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/authentication/view/: create.rs
src/domain/: organization.rs
src/resources/: organization.rs
src/routes/: health_check.rs  signup.rs
src/view/: shell.rs
